chore: adjust desktop package